# amaranth-yosys

./: .gitignore  .gitmodules  LICENSE.txt  README.rst  build.sh  build_yosys.sh  dependencies.txt  pyproject.toml  setup.py
.github/workflows/: main.yml  package.yml  track-wasmtime.yml  track_wasmtime.yml
amaranth_yosys/: __main__.py
nmigen_yosys/: __init__.py  __main__.py
tests/: inverter.il
