[build-system]
requires = ["setuptools~=67.0", "setuptools_scm[toml]~=7.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]

name = "amaranth-yosys"
description = "Specialized WebAssembly build of Yosys used by Amaranth HDL"
readme = "README.rst"
license = {text = "ISC"}
authors = [{name = "whitequark", email = "whitequark@whitequark.org"}]
classifiers = [
  "License :: OSI Approved :: ISC License (ISCL)",
]

[project.urls]
"Source Code" = "https://github.com/amaranth-lang/amaranth-yosys"
"Bug Tracker" = "https://github.com/amaranth-lang/amaranth-yosys/issues"

[tool.setuptools]
packages = ["amaranth_yosys"]

[tool.setuptools.package-data]
amaranth_yosys = ["yosys.wasm", "share/**/**/**/*"]

[tool.setuptools.dynamic]
dependencies = {file = "dependencies.txt"}
